...
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>
    <string name="edit_profile_header">Settings</string>
    <string name="edit_profile_age_error">This date format is invalid! Please use YEAR-MONTH-DAY instead.</string>
    <string name="edit_profile_name_empty_error">Please enter your name</string>
    <string name="edit_profile_birthday">Birthday</string>
    <string name="edit_profile_job">Job</string>
    <string name="register_btn">REGISTER</string>
    <string name="login_btn">LOGIN</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="enter_username_alert">Please enter a username!</string>
...
